--- a/components/buttons.less
+++ b/components/buttons.less
@@ -34,6 +34,7 @@
 	border-radius: 5px;
 	border-bottom: 2px solid @dark-grey;
 	cursor: pointer;
+	color:black;
 	&.big {
 		padding: 10px 10px !important;
 	}
