--- a/main.less
+++ b/main.less
@@ -8,4 +8,17 @@
 body {
 	background:@light-grey;
 	padding:0 10px;
+	a {
+		text-decoration:none;
+		color:rgb(0,0,150);;
+	}
+}
+
+code {
+	display: block;
+	padding: 10px;
+	background: rgba(0,0,0, 1);
+	margin: 5px;
+	border-radius: 5px;
+	color: rgb(0, 252, 20);
 }
