--- a/main.less
+++ b/main.less
@@ -12,9 +12,11 @@ body {
 		text-decoration:none;
 		color:rgb(0,0,150);;
 	}
-}
-
-code {
+	hr {
+		border: 1px solid rgba(0,0,0,.1);
+		margin: 15px 0;
+	}
+	code {
 	display: block;
 	padding: 10px;
 	background: rgba(0,0,0, 1);
@@ -22,4 +24,7 @@ code {
 	border-radius: 5px;
 	color: rgb(0, 252, 20);
 	max-width: 600px;
+	}
 }
+
+
