--- a/components/nav.less
+++ b/components/nav.less
@@ -1,3 +1,97 @@
-// Navigation
+// .navigation
 
 @import "variables.less";
+
+.nav a {
+	.navi (@grey, @dark-grey, black);
+
+	&:hover {
+		.navihvr (@grey);
+	}
+
+}
+
+.nav {
+	&.red {
+	a {
+	.navi(@red, @dark-red, white);
+	}
+	}
+	&.red:hover {
+		a:hover {
+			.navihvr (@red);
+		}
+	}
+	&.blue {
+		a {
+		.navi(@blue, @dark-blue, white);
+	}
+	}
+
+	&.blue:hover {
+		a:hover {
+			.navihvr (@blue);
+		}
+	}
+	&.green {
+		a {
+			.navi(@green, @dark-green, white);
+		}
+	}
+	&.green:hover {
+		a:hover {
+			.navihvr (@green);
+		}
+	}
+	&.yellow {
+		a {
+		.navi(@yellow, @dark-yellow, black);
+	}
+	}
+	&.yellow:hover {
+		a:hover {
+		.navihvr (@yellow);
+	}
+	}
+	&.aqua {
+		a {
+		.navi(@aqua, @dark-aqua, white);
+	}
+	}
+	&.aqua:hover {
+		a:hover {
+		.navihvr (@aqua);
+	}
+	}
+	&.orange {
+		a {
+		.navi(@orange, @dark-orange, white);
+	}
+	}
+	&.orange:hover {
+		a:hover {
+		.navihvr (@orange);
+	}
+	}
+	&.purple {
+		a {
+		.navi(@purple, @dark-purple, white);
+	}
+	}
+	&.purple:hover {
+		a:hover {
+		.navihvr (@purple);
+	}
+	}
+	&.dark {
+		a {
+		.navi(@really-dark-blue, @very-dark-blue, white);
+	}
+	}
+	&.dark:hover {
+		a:hover {
+		.navihvr (@really-dark-blue);
+	}
+	}
+}
+}
