--- a/components/variables.less
+++ b/components/variables.less
@@ -24,6 +24,74 @@
 
 //Mixins
 
+//Transitions
 .transition {
 transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+}
+
+//Buttons
+.button (@bg, @bottom, @text) {
+	.transition;
+	display: inline-block;
+	padding: 5px;
+	background: @bg;
+	border-radius: 5px;
+	border-bottom: 2px solid @bottom;
+	cursor: pointer;
+	color:@text;
+}
+
+.buttonhvr (@bg, @bottom, @text) {
+	.transition;
+	background: darken(@bg, 5%);
+	border-bottom: 2px solid darken(@bottom, 5%);
+}
+
+.buttonatv (@bg, @bottom, @text) {
+	.transition;
+	background:darken(@bg, 5%);
+	border-bottom:1px solid darken(@bottom, 5%);
+	position:relative;
+	top:0.5px;
+}
+//End Buttons
+
+//Labels
+.label (@bg, @bottom, @text) {
+	.transition;
+	display: inline-block;
+	padding: 5px;
+	background: @bg;
+	border-bottom: 2px solid @bottom;
+	color:@text;
+}
+
+
+//Gradients
+
+.gradient(@c1, @c2) {
+	background: @c2;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@c1', endColorstr='@c2');
+	background: -webkit-gradient(linear, left top, left bottom, from(@c1), to(@c2));
+	background: -moz-linear-gradient(top,  @c1,  @c2);
+	background: -ms-linear-gradient(top,  @c1,  @c2);
+	background: -o-linear-gradient(top,  @c1,  @c2);
+}
+
+
+//Nav Elements
+
+.navi (@bg, @btm, @text) {
+	.transition;
+	margin: -2px;
+	background: @bg;
+	display: inline-block;
+	color: @text;
+	padding: 10px;
+	border-bottom: 2px solid @btm;
+}
+
+.navihvr (@bg) {
+		.transition;
+		background:darken(@bg, 20%);
 }
