--- a/main.css
+++ b/main.css
@@ -11,20 +11,139 @@ body {
 .transition {
   transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
+.nav a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #bdc3c7;
+  display: inline-block;
+  color: #000000;
+  padding: 10px;
+  border-bottom: 2px solid #95a5a6;
+}
+.nav a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #869198;
+}
+.nav.red a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #e74c3c;
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px;
+  border-bottom: 2px solid #c0392b;
+}
+.nav.red:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #a82315;
+}
+.nav.blue a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #3498db;
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px;
+  border-bottom: 2px solid #2980b9;
+}
+.nav.blue:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #196090;
+}
+.nav.green a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #2ecc71;
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px;
+  border-bottom: 2px solid #27ae60;
+}
+.nav.green:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #1b7943;
+}
+.nav.yellow a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #f1c40f;
+  display: inline-block;
+  color: #000000;
+  padding: 10px;
+  border-bottom: 2px solid #f39c12;
+}
+.nav.yellow:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #927608;
+}
+.nav.aqua a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #1abc9c;
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px;
+  border-bottom: 2px solid #16a085;
+}
+.nav.aqua:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #0e6252;
+}
+.nav.orange a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #e67e22;
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px;
+  border-bottom: 2px solid #d35400;
+}
+.nav.orange:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #924d10;
+}
+.nav.purple a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #9b59b6;
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px;
+  border-bottom: 2px solid #8e44ad;
+}
+.nav.purple:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #623475;
+}
+.nav.dark a {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  margin: -2px;
+  background: #34495e;
+  display: inline-block;
+  color: #ffffff;
+  padding: 10px;
+  border-bottom: 2px solid #2c3e50;
+}
+.nav.dark:hover a:hover {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  background: #10161c;
+}
 .transition {
   transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
 .bn {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   display: inline-block;
   padding: 5px;
   background: #bdc3c7;
   border-radius: 5px;
   border-bottom: 2px solid #95a5a6;
   cursor: pointer;
-  color: black;
+  color: #000000;
 }
 .bn.big {
   padding: 20px 60px !important;
+  font-size: 1.5em;
 }
 .bn.small {
   padding: 4px;
@@ -209,16 +328,95 @@ body {
 .transition {
   transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
 }
-input[type='text'] {
+.field {
+  padding: 10px;
+}
+input[type='text'],
+input[type='email'],
+input[type='password'] {
   transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   padding: 5px;
   border-radius: 5px;
   border: 1px solid #bdc3c7;
 }
-input[type='text']:focus {
+input[type='text']:focus,
+input[type='email']:focus,
+input[type='password']:focus {
   transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   box-shadow: 1px 0 7px 1px #aaa;
   background: #ecf0f1;
+}
+.lbl {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #bdc3c7;
+  border-bottom: 2px solid #95a5a6;
+  color: #000000;
+}
+.lbl.red {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #e74c3c;
+  border-bottom: 2px solid #c0392b;
+  color: #ffffff;
+}
+.lbl.blue {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #3498db;
+  border-bottom: 2px solid #2980b9;
+  color: #ffffff;
+}
+.lbl.green {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #2ecc71;
+  border-bottom: 2px solid #27ae60;
+  color: #ffffff;
+}
+.lbl.yellow {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #f1c40f;
+  border-bottom: 2px solid #f39c12;
+  color: #000000;
+}
+.lbl.aqua {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #1abc9c;
+  border-bottom: 2px solid #16a085;
+  color: #ffffff;
+}
+.lbl.orange {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #e67e22;
+  border-bottom: 2px solid #d35400;
+  color: #ffffff;
+}
+.lbl.purple {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #9b59b6;
+  border-bottom: 2px solid #8e44ad;
+  color: #ffffff;
+}
+.lbl.dark {
+  transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
+  display: inline-block;
+  padding: 5px;
+  background: #34495e;
+  border-bottom: 2px solid #2c3e50;
+  color: #ffffff;
 }
 body {
   background: #ecf0f1;
