--- a/components/nav.less
+++ b/components/nav.less
@@ -8,7 +8,12 @@
 	&:hover {
 		.navihvr (@grey);
 	}
-
+	&:first-child {
+		border-radius: 5px 0px 0px 5px;
+	}
+	&:last-child {
+		border-radius: 0px 5px 5px 0px;
+	}
 }
 
 .nav {
