--- a/components/nav.css
+++ b/components/nav.css
@@ -14,6 +14,12 @@
   transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   background: #869198;
 }
+.nav a:first-child {
+  border-radius: 5px 0px 0px 5px;
+}
+.nav a:last-child {
+  border-radius: 0px 5px 5px 0px;
+}
 .nav.red a {
   transition: background 0.25s,color 0.25s,border 0.25s, position 0.25s;
   margin: -2px;
