--- a/main.less
+++ b/main.less
@@ -25,6 +25,11 @@ body {
 	color: rgb(0, 252, 20);
 	max-width: 600px;
 	}
+	.prof {
+		border-radius:100%;
+		-webkit-border-radius:100%;
+		border:2px solid @grey;
+	}
 }
 
 
