--- a/main.css
+++ b/main.css
@@ -424,6 +424,9 @@ input[type='password']:focus {
   border-bottom: 2px solid #2c3e50;
   color: #ffffff;
 }
+.lbl input {
+  margin-left: 15px;
+}
 body {
   background: #ecf0f1;
   padding: 0 10px;
