--- a/components/forms.less
+++ b/components/forms.less
@@ -6,6 +6,11 @@
 .field {
 	padding: 10px;
 }
+
+:focus {
+	outline: rgba(0,0,0,0) auto 5px !important;
+};
+	
 	input[type='text'], input[type='email'], input[type='password'] {
 		.transition;
 		padding: 5px;
@@ -14,7 +19,7 @@
 	
 		&:focus {
 			.transition;
-			box-shadow: 1px 0 7px 1px #aaa;
+			border:1px solid rgba(0,0,0,0);
 			background: @light-grey;
 		}
 	}
