--- a/components/forms.less
+++ b/components/forms.less
@@ -20,7 +20,7 @@
 		&:focus {
 			.transition;
 			border:1px solid rgba(0,0,0,0);
-			background: @light-grey;
+			background: rgba(0,0,0,0);
 		}
 	}
 	.lbl {
