--- a/components/type.less
+++ b/components/type.less
@@ -1,9 +1,9 @@
 // Typography
 
 @import "variables.less";
-@import url(http://fonts.googleapis.com/css?family=Droid+Sans:400,700);
+@import url(http://fonts.googleapis.com/css?family=Lato:400,700);
 
-@sans: Droid Sans, Helvetica, Arial, sans-serif;
+@sans: Lato, Helvetica, Arial, sans-serif;
 @serif: Times New Roman, Georgia, serif;
 
 body {
