--- a/components/forms.less
+++ b/components/forms.less
@@ -8,7 +8,7 @@
 }
 
 :focus {
-	outline: rgba(0,0,0,0) auto 5px !important;
+	outline: none;
 };
 	
 	input[type='text'], input[type='email'], input[type='password'] {
