Fixed input outline bug in some browsers

--- a/main.css
+++ b/main.css
@@ -338,7 +338,7 @@ body {
   padding: 10px;
 }
 :focus {
-  outline: rgba(0, 0, 0, 0) auto 5px !important;
+  outline: none;
 }
 input[type='text'],
 input[type='email'],
