--- a/components/forms.css
+++ b/components/forms.css
@@ -5,7 +5,7 @@
   padding: 10px;
 }
 :focus {
-  outline: rgba(0, 0, 0, 0) auto 5px !important;
+  outline: none;
 }
 input[type='text'],
 input[type='email'],
